# bondrewd

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cli/: CMakeLists.txt  demo_lexer.cpp  demo_lexer.hpp  demo_parser.cpp  demo_parser.hpp  main.cpp
docs/: requirements.txt
docs/source/: bondrewd_pygments.py  conf.py  ctime.md  datamodel.md  grammar.md  ideas.md  index.md  index.rst
grammar/: bondrewd.asdl  bondrewd.gram  keywords  puncts
include/bondrewd/: src_location.hpp  token.hpp  tokens.generated.hpp
include/bondrewd/ast/: ast.hpp  ast_nodes.gen.hpp  ast_nodes.generated.hpp  visitor.hpp
include/bondrewd/ctime/: attr_dict.hpp  object.hpp  object_ptr.hpp  scope.hpp  trait.hpp  type.hpp
include/bondrewd/internal/: arena.hpp  common.hpp
include/bondrewd/lex/: error.hpp  lexer.hpp  scanner.hpp  src_location.hpp  token.hpp  tokenizer.hpp  tokens.gen.hpp  tokens.generated.hpp
include/bondrewd/parse/: error.hpp  parser.gen.hpp  parser_base.hpp
src/: common.cpp
src/ast/: ast.cpp
src/ctime/: attr_dict.cpp  object.cpp  object_ptr.cpp
src/internal/: arena.cpp  common.cpp
src/lex/: lexer.cpp  scanner.cpp  tokenizer.cpp  tokens.gen.cpp  tokens.generated.cpp
src/parse/: parser.gen.cpp
tools/: Makefile  jinja_codegen.py  token_listing.py  zephyr-asdl-abel1502-1.0.0.vsix
tools/asdl++/: README.md  asdl.py  asdl_cpp.py  generate.mk
tools/asdl++/templates/: ast_nodes.tpl.hpp
tools/jinja_codegen/: README.md
tools/pegen++/: LICENSE  README.md  custom_pegen_grammar_parser.py  custom_pegen_metagrammar.gram  cxx_generator.py  generate.mk  pegenxx.py  requirements.txt
tools/pegen++/templates/: parser.tpl.cpp  parser.tpl.hpp
tools/templated_codegen/: README.md  __init__.py
tools/tokens/: generate.mk  generate_tokens.py  trie_gen.py
tools/tokens/templates/: tokens.tpl.cpp  tokens.tpl.hpp
tools/vscode_ext/: README.md
